# Public domain

CONFIG_GUESS("../mk/config.guess")

REGISTER_SECTION("Agar test suite options:")
REGISTER("--with-agar[=PREFIX]",	"Location of Agar library [check]")
REGISTER("--enable-warnings",		"Suggested compiler warnings [no]")
REGISTER("--enable-debug",		"General debugging [no]")

DEFAULT_DIR(DATADIR, "${PREFIX}/share/agartest")
DEFAULT_DIR(LOCALEDIR, "${DATADIR}/locale")

REQUIRE(cc)
REQUIRE(agar, 1.5.0, ${prefix_agar})
REQUIRE(agar-dev, 1.5.0, ${prefix_agar})
REQUIRE(agar-math, 1.5.0, ${prefix_agar})
CHECK(agar-vg, 1.5.0, ${prefix_agar})
CHECK(agar-au, 1.5.0, ${prefix_agar})
CHECK(rand48)

C_INCDIR($SRC)
C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_AGAR_TYPES)

if [ "${enable_warnings}" = "yes" ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wmissing-prototypes)
	MDEFINE(WNO_UNINITIALIZED, "-Wno-uninitialized")
else
	MDEFINE(WNO_UNINITIALIZED, "")
fi

if [ "${enable_debug}" = "yes" ]; then
	MDEFINE(CFLAGS, "${CFLAGS} -g")
fi

#MDEFINE(SRCS_EXTRA, "")
#if [ "${HAVE_AGAR_AU}" = "yes" ]; then
#	MAPPEND(SRCS_EXTRA, "audio.c")
#fi

C_INCDIR($BLD)
C_INCDIR_CONFIG($BLD/config)
