# $Csoft: configure.in,v 1.74 2003/08/07 22:41:35 vedge Exp $
# Public domain

REGISTER("--with-smpeg",	"MPEG playback using smpeg [default: check]")
REGISTER("--with-x11",		"X11-specific code [default: check]")
REGISTER("--with-gl",		"OpenGL rendering support [default: check]")
REGISTER("--with-jpeg",		"JPEG screenshot support [default: check]")
REGISTER("--enable-edition",	"Graphical edition [default: yes]")
REGISTER("--enable-debug",	"Engine debugging [default: yes]")
REGISTER("--enable-threads",	"Thread safety [default: no]")
REGISTER("--enable-floating-point", "Floating point operations [default: yes]")
REGISTER("--enable-static",	"Produce a static binary [default: no]")
REGISTER("--enable-8bpp",	"Support for 8 bpp display [default: yes]")
REGISTER("--enable-16bpp",	"Support for 16 bpp display [default: yes]")
REGISTER("--enable-24bpp",	"Support for 24 bpp display [default: yes]")
REGISTER("--enable-32bpp",	"Support for 32 bpp display [default: yes]")

# System-wide data directory.
MDEFINE(SHAREDIR, "$PREFIX/share/cave")
HDEFINE(SHAREDIR, "\"$PREFIX/share/cave\"")

# Where to install fonts included in the distribution.
MDEFINE(TTFDIR, "$PREFIX/share/cave/fonts")
HDEFINE(TTFDIR, "\"$PREFIX/share/cave/fonts\"")

# Manual and PostScript installation directories.
MDEFINE(INST_MANDIR, "$PREFIX/share/agar/man")
MDEFINE(INST_PSDIR, "$PREFIX/share/agar/ps")

# Where to install locales for multi-language support.
MDEFINE(LOCALEDIR, "$PREFIX/share/locale")
HDEFINE(LOCALEDIR, "\"$PREFIX/share/locale\"")

CHECK(cc)
CHECK(progname)
CHECK(math)
CHECK(gethostname)
CHECK(getenv)
CHECK(setenv)
CHECK(strsep)
CHECK(strlcat)
CHECK(strlcpy)
CHECK(asprintf)
CHECK(vasprintf)
CHECK(snprintf)
CHECK(vsnprintf)
CHECK(setlocale)

MDEFINE(CFLAGS, "$CFLAGS -I$SRC")
#MDEFINE(CFLAGS, "$CFLAGS -Wall -Werror -Wmissing-prototypes -Wno-unused")
#MDEFINE(CFLAGS, "$CFLAGS -Wno-missing-headers")

# Require SDL and FreeType.
REQUIRE(sdl, 1.2.0)
REQUIRE(freetype, 7.0.1)

# Include X11-specific code? (only used for debugging)
if [ "${with_x11}" != "no" ]; then
	CHECK(x11)
else
	HUNDEF(HAVE_X11)
fi

# Enable OpenGL support if an OpenGL library is found.
if [ "${with_gl}" != "no" ]; then
	CHECK(opengl)
	if [ "${HAVE_OPENGL}" = "yes" ]; then
		MDEFINE(SDL_CFLAGS, "$SDL_CFLAGS $OPENGL_CFLAGS")
	fi
else
	HUNDEF(HAVE_OPENGL)
fi

# Enable JPEG support if libjpeg is found.
if [ "${with_jpeg}" != "no" ]; then
	CHECK(jpeg)
else
	HUNDEF(HAVE_JPEG)
fi

# Enable MPEG support if the SMPEG library is found.
if [ "${with_smpeg}" != "no" ]; then
	CHECK(smpeg, 0.4.4)
else
	HUNDEF(HAVE_SMPEG)
fi

# Compile a static binary?
if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi

# Don't enable debugging unless requested explicitely.
if [ "${enable_debug}" != "no" ]; then
	HDEFINE(DEBUG, 1)
	HDEFINE(LOCKDEBUG, 1)
else
	HUNDEF(DEBUG)
	HUNDEF(LOCKDEBUG)
fi

# Don't enable thread safety unless requested explicitely.
if [ "${enable_threads}" = "yes" ]; then
	HDEFINE(THREADS, 1)
else
	HUNDEF(THREADS)
fi

# Enable floating point operations by default.
if [ "${enable_floating_point}" != "no" ]; then
	HDEFINE(FLOATING_POINT, 1)
else
	HUNDEF(FLOATING_POINT)
fi

# Enable graphical edition by default.
if [ "${enable_edition}" != "no" ]; then
	HDEFINE(EDITION, 1)
else
	HUNDEF(EDITION)
fi

# Support 8/16/24/32bpp video displays by default.
# Disable unused modes to reduce code size and gain some cycles.
if [ "${enable_8bpp}" != "no" ]; then
	HDEFINE(VIEW_8BPP, 1)
else
	HUNDEF(VIEW_8BPP)
fi
if [ "${enable_16bpp}" != "no" ]; then
	HDEFINE(VIEW_16BPP, 1)
else
	HUNDEF(VIEW_16BPP)
fi
if [ "${enable_24bpp}" != "no" ]; then
	HDEFINE(VIEW_24BPP, 1)
else
	HUNDEF(VIEW_24BPP)
fi
if [ "${enable_32bpp}" != "no" ]; then
	HDEFINE(VIEW_32BPP, 1)
else
	HUNDEF(VIEW_32BPP)
fi

